--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">ForegroundService</string>
     <string name="stop_service">Stop service</string>
     <string name="start_service">Start service</string>
+    <string name="title">Foreground Service</string>
+    <string name="ticker">Foreground Service</string>
+    <string name="content_text">This is foreground service</string>
+    <string name="close">Close</string>
 </resources>
